Aggiornato index.html per GitHub Pages

--- a/collezione_pokemon/index.html
+++ b/collezione_pokemon/index.html
@@ -1,182 +1,103 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Collezione Pokémon</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Collezione Pokèmon</title>
   <style>
-    :root{
-      --bg:#f2f2f2;
-      --card:#ffffff;
-      --muted:#666;
-      --accent:#ffcb05;
-      --progress:#4caf50;
-    }
-    body{font-family:Arial,Helvetica,sans-serif;background:var(--bg);margin:0;padding:0;color:#222}
-    header{display:flex;align-items:center;gap:15px;background:var(--card);padding:16px;border-bottom:1px solid #ddd}
-    header img{height:56px}
-    header h1{margin:0;font-size:20px;color:#222}
-    #content{max-width:1100px;margin:22px auto;padding:0 16px}
-    .era-container{background:var(--card);border-radius:10px;padding:18px;margin-bottom:18px;box-shadow:0 1px 2px rgba(0,0,0,0.04)}
-    .era-title{font-size:20px;font-weight:700;margin-bottom:12px;border-left:6px solid var(--accent);padding-left:10px}
-    .set-card{display:flex;align-items:center;justify-content:space-between;padding:10px;border-radius:8px;background:#fafafa;border:1px solid #eee;margin:8px 0}
-    .set-info{display:flex;align-items:center;gap:12px}
-    .set-info img{height:44px;width:auto;border-radius:4px;object-fit:contain;background:#fff;padding:4px;border:1px solid #eee}
-    .set-name{font-weight:600}
-    .progress{width:220px;height:20px;background:#e6e6e6;border-radius:12px;overflow:hidden;position:relative}
-    .progress-bar{height:100%;background:var(--progress);display:flex;align-items:center;justify-content:center;color:#fff;font-size:12px;white-space:nowrap}
-    .meta{font-size:13px;color:var(--muted)}
-    .center{text-align:center;padding:40px 0;color:var(--muted)}
-    /* responsive */
-    @media (max-width:640px){
-      .set-card{flex-direction:column;align-items:flex-start;gap:8px}
-      .progress{width:100%}
-    }
+    body { font-family: Arial, sans-serif; background: #f2f2f2; margin: 0; padding: 0; }
+    header { display: flex; align-items: center; gap: 15px; background: #fff; padding: 15px; border-bottom: 1px solid #ccc; }
+    header img { height: 60px; }
+    header h1 { margin: 0; font-size: 24px; color: #333; }
+    .era-container { margin: 20px auto; padding: 20px; max-width: 900px; background: #fff; border-radius: 10px; }
+    .era-title { font-size: 28px; font-weight: bold; margin-bottom: 20px; border-left: 6px solid #ffcb05; padding-left: 10px; }
+    .set-card { display: flex; align-items: center; justify-content: space-between; background: #fafafa; padding: 12px 18px; border-radius: 10px; margin: 10px 0; border: 1px solid #ddd; }
+    .set-info { display: flex; align-items: center; gap: 10px; }
+    .set-info img { height: 40px; }
+    .progress { width: 160px; height: 18px; background: #ddd; border-radius: 10px; overflow: hidden; text-align: center; font-size: 12px; line-height: 18px; color: #fff; }
+    .progress-bar { height: 100%; background: #4caf50; display: flex; align-items: center; justify-content: center; }
   </style>
 </head>
 <body>
   <header>
-    <img src="assets/logo_pokemon.png" alt="Pokémon">
-    <h1>Collezione Pokémon</h1>
+    <img src="collezione-pokemon/assets/logo_pokemon.png" alt="Pokémon Logo">
+    <h1>Collezione Pokèmon</h1>
   </header>
 
   <div id="content">
-    <div class="center">Caricamento dati…</div>
+    <p style="text-align:center; margin-top:50px;">Caricamento dati...</p>
   </div>
 
   <script>
-    // percorso relativo ai file nella repo (assets)
-    const SETS_JSON = 'assets/sets.json';
-    const CARDS_JSON = 'assets/cards.json';
+    async function getJSON(path) {
+      const response = await fetch(path);
+      return response.json();
+    }
 
-    // carica i due file in parallelo
-    Promise.all([
-      fetch(SETS_JSON).then(r => r.ok ? r.json() : Promise.reject('sets.json non trovato')),
-      fetch(CARDS_JSON).then(r => r.ok ? r.json() : Promise.reject('cards.json non trovato'))
-    ]).then(([sets, cards]) => {
-      renderPage(sets, cards);
-    }).catch(err => {
-      document.getElementById('content').innerHTML = `<div class="center">Errore caricamento dati: ${err}</div>`;
-      console.error(err);
-    });
+    async function renderPage() {
+      const sets = await getJSON('collezione-pokemon/sets.json');
+      const cards = await getJSON('collezione-pokemon/cards.json');
 
-    function renderPage(setsArr, cardsArr) {
-      const content = document.getElementById('content');
-      content.innerHTML = '';
+      const content = document.getElementById("content");
+      content.innerHTML = "";
 
-      // normalizza chiavi (in caso arrivino con nomi leggermente diversi)
-      const sets = setsArr.map(s => ({
-        ID: s.ID ?? s.Id ?? s.id ?? null,
-        NomeSet: s.Nome_Set ?? s.NomeSet ?? s.Nome ?? s.NomeSet ?? '',
-        Totale_Carte: Number(s.Totale_Carte ?? s.TotaleCarte ?? s.Totale ?? 0) || 0,
-        Era: s.Era ?? s.Era ?? 'Altro',
-        Tipo: s.Tipo ?? '',
-        Nome_Logo: s.Nome_Logo ?? s.NomeLogo ?? s.Logo ?? ''
-      }));
-
-      const cards = cardsArr.map(c => ({
-        ID_Set: c.ID_Set ?? c.Id_Set ?? c.IDSet ?? c.ID ?? null,
-        Numero_Carta: c.Numero_Carta ?? c.NumeroCarta ?? c.Numero ?? '',
-        Nome_Carta: c.Nome_Carta ?? c.NomeCarta ?? c.Nome ?? '',
-        Rarita: c.Rarita ?? '',
-        Lingua: c.Lingua ?? '',
-        Posseduta: (typeof c.Posseduta === 'boolean') ? c.Posseduta :
-                   (String(c.Posseduta).toLowerCase() === 'true') ? true : false,
-        Bandiera: c.Bandiera ?? (c.Lingua === 'IT' ? '🇮🇹' : (c.Lingua === 'EN' ? '🇬🇧' : ''))
-      }));
-
-      // raggruppa sets per Era
+      // Raggruppa per era
       const eras = {};
-      sets.forEach(s => {
-        const era = s.Era || 'Altro';
-        if (!eras[era]) eras[era] = [];
-        eras[era].push(s);
+      sets.forEach(set => {
+        if (!eras[set.Era]) eras[set.Era] = [];
+        eras[set.Era].push(set);
       });
 
-      // per ogni set calcola possedute (se vuoi contare le carte)
-      sets.forEach(s => {
-        const owned = cards.filter(c => Number(c.ID_Set) === Number(s.ID)).length
-                      ? cards.filter(c => Number(c.ID_Set) === Number(s.ID)).reduce((acc,c) => acc + (c.Posseduta ? 1 : 0), 0)
-                      : 0;
-        // se tu vuoi sommare possedute come numero totale di copie, adattalo qui
-        s.Possedute = owned;
-      });
+      for (let era in eras) {
+        const eraBox = document.createElement("div");
+        eraBox.className = "era-container";
 
-      // render
-      for (const era of Object.keys(eras)) {
-        const eraBox = document.createElement('div');
-        eraBox.className = 'era-container';
-
-        const title = document.createElement('div');
-        title.className = 'era-title';
+        const title = document.createElement("div");
+        title.className = "era-title";
         title.textContent = era;
         eraBox.appendChild(title);
 
-        // ordina i set per nome o ID (opzionale)
-        eras[era].sort((a,b) => (a.ID || 0) - (b.ID || 0));
-
         eras[era].forEach(set => {
-          const item = document.createElement('div');
-          item.className = 'set-card';
+          const card = document.createElement("div");
+          card.className = "set-card";
 
-          const left = document.createElement('div');
-          left.className = 'set-info';
+          const info = document.createElement("div");
+          info.className = "set-info";
 
-          const img = document.createElement('img');
-          // se il file logo è presente in assets, carica assets/<Nome_Logo>, altrimenti lascia placeholder
-          img.src = set.Nome_Logo ? `assets/${set.Nome_Logo}` : '';
-          img.alt = set.NomeSet;
-          img.onerror = function(){ this.style.display='none'; };
+          const img = document.createElement("img");
+          img.src = set.Nome_Logo ? `collezione-pokemon/assets/${set.Nome_Logo}` : "";
+          img.alt = set.Nome_Set;
 
-          const nameWrap = document.createElement('div');
-          const name = document.createElement('div');
-          name.className = 'set-name';
-          name.textContent = set.NomeSet || '—';
+          const name = document.createElement("div");
+          name.textContent = set.Nome_Set;
 
-          const meta = document.createElement('div');
-          meta.className = 'meta';
-          meta.textContent = `${set.Totale_Carte} carte • ${set.Tipo || ''}`;
+          info.appendChild(img);
+          info.appendChild(name);
 
-          nameWrap.appendChild(name);
-          nameWrap.appendChild(meta);
+          const progress = document.createElement("div");
+          progress.className = "progress";
 
-          left.appendChild(img);
-          left.appendChild(nameWrap);
+          const possedute = cards.filter(c => c.ID_Set === set.ID).length;
+          const totale = set.Totale_Carte || 0;
+          const perc = totale ? Math.round((possedute / totale) * 100) : 0;
 
-          const right = document.createElement('div');
+          const bar = document.createElement("div");
+          bar.className = "progress-bar";
+          bar.style.width = perc + "%";
+          bar.textContent = `${possedute} / ${totale}`;
 
-          const progressWrap = document.createElement('div');
-          progressWrap.className = 'progress';
+          progress.appendChild(bar);
 
-          // percentuale: usa Totale_Carte e Possedute (evita divisione per 0)
-          const tot = Number(set.Totale_Carte) || 0;
-          const poss = Number(set.Possedute) || 0;
-          const perc = tot ? Math.round((poss / tot) * 100) : 0;
-
-          const bar = document.createElement('div');
-          bar.className = 'progress-bar';
-          bar.style.width = perc + '%';
-          bar.textContent = `${poss} / ${tot} (${perc}%)`;
-
-          progressWrap.appendChild(bar);
-          right.appendChild(progressWrap);
-
-          item.appendChild(left);
-          item.appendChild(right);
-          eraBox.appendChild(item);
+          card.appendChild(info);
+          card.appendChild(progress);
+          eraBox.appendChild(card);
         });
 
         content.appendChild(eraBox);
       }
-
-      // Footer rapido
-      const footer = document.createElement('div');
-      footer.style.textAlign = 'center';
-      footer.style.margin = '18px 0';
-      footer.style.color = '#888';
-      footer.textContent = `Sets caricati: ${sets.length} — Carte presenti nel JSON: ${cards.length}`;
-      content.appendChild(footer);
     }
+
+    renderPage();
   </script>
 </body>
 </html>
