--- a/collezione_pokemon/index.html
+++ b/collezione_pokemon/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
   <header>
-    <img src="collezione-pokemon/assets/logo_pokemon.png" alt="Pokémon Logo">
+    <img src="assets/logo_pokemon.png" alt="Pokémon Logo">
     <h1>Collezione Pokèmon</h1>
   </header>
 
@@ -29,17 +29,28 @@
   </div>
 
   <script>
-    async function getJSON(path) {
-      const response = await fetch(path);
-      return response.json();
-    }
+    // Caricamento dei JSON
+    Promise.all([
+      fetch('sets.json').then(r => r.json()),
+      fetch('cards.json').then(r => r.json())
+    ]).then(([setsData, cardsData]) => {
+      renderPage(setsData, cardsData);
+    }).catch(err => {
+      const content = document.getElementById("content");
+      content.innerHTML = "<p style='color:red; text-align:center;'>Errore nel caricamento dei dati</p>";
+      console.error(err);
+    });
 
-    async function renderPage() {
-      const sets = await getJSON('sets.json');
-      const cards = await getJSON('cards.json');
-
+    function renderPage(sets, cards) {
       const content = document.getElementById("content");
       content.innerHTML = "";
+
+      // Aggiungi conteggio possedute a ogni set
+      sets.forEach(set => {
+        const possedute = cards.filter(c => c.ID_Set === set.ID)
+                               .reduce((sum, c) => sum + (c.Posseduta ? 1 : 0), 0);
+        set.Possedute = possedute;
+      });
 
       // Raggruppa per era
       const eras = {};
@@ -77,12 +88,13 @@
           const progress = document.createElement("div");
           progress.className = "progress";
 
-          const possedute = cards.filter(c => c.ID_Set === set.ID).length;
+          const bar = document.createElement("div");
+          bar.className = "progress-bar";
+
+          const possedute = set.Possedute || 0;
           const totale = set.Totale_Carte || 0;
           const perc = totale ? Math.round((possedute / totale) * 100) : 0;
 
-          const bar = document.createElement("div");
-          bar.className = "progress-bar";
           bar.style.width = perc + "%";
           bar.textContent = `${possedute} / ${totale}`;
 
@@ -96,8 +108,6 @@
         content.appendChild(eraBox);
       }
     }
-
-    renderPage();
   </script>
 </body>
 </html>
