--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <header>
     <img src="assets/logo_pokemon.png" alt="Pokémon Logo">
     <h1>Collezione Pokémon</h1>
+    <button id="themeToggle" class="toggle-btn">
+      <img src="assets/pokeball.png" alt="Toggle Theme" height="24">
+    </button>
   </header>
 
   <div id="content">
