--- a/set.html
+++ b/set.html
@@ -10,6 +10,9 @@
   <header>
     <img src="assets/logo_pokemon.png" alt="Pokémon Logo">
     <h1 id="set-title">Set</h1>
+    <button id="themeToggle" class="toggle-btn">
+      <img src="assets/pokeball.png" alt="Toggle Theme" height="24">
+    </button>
   </header>
 
   <a href="index.html" class="home-btn">Home</a>
