--- a/set.html
+++ b/set.html
@@ -17,7 +17,7 @@
 
   <a href="index.html" class="home-btn">Home</a>
 
-  <!-- LOGO ALTERNATIVO DEL SET -->
+  <!-- LOGO ALTERNATIVO + GIF PICCOLA -->
   <div id="set-alt-logo-container"></div>
 
   <div class="cards-container" id="cards-container">
