--- a/set.html
+++ b/set.html
@@ -15,9 +15,9 @@
     </button>
   </header>
 
+  <!-- BOTTONE HOME STILE POKÉMON -->
   <a href="index.html" class="home-btn">Home</a>
 
-  <!-- LOGO ALTERNATIVO + GIF PICCOLA -->
   <div id="set-alt-logo-container"></div>
 
   <div class="cards-container" id="cards-container">
